--- a/TodoList/TodoList.csproj
+++ b/TodoList/TodoList.csproj
@@ -172,6 +172,14 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\css-folder\account\login.css" />
+    <Content Include="Content\css-folder\account\register.css" />
+    <Content Include="Content\css-folder\home\index.css" />
+    <Content Include="Content\css-folder\todo\create.css" />
+    <Content Include="Content\css-folder\todo\delete.css" />
+    <Content Include="Content\css-folder\todo\details.css" />
+    <Content Include="Content\css-folder\todo\edit.css" />
+    <Content Include="Content\css-folder\todo\index.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
